✨ Update CV title and header for consistency and personalization

--- a/cv.html
+++ b/cv.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Professional CV</title>
-    <meta name="description" content="Professional CV and Resume">
+    <title>Damian Garbus CV</title>
+    <meta name="description" content="My CV and Resume">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -344,14 +344,14 @@
     <div class="cv-container">
         <header class="cv-header">
             <div class="header-content">
-                <h1>My Professional CV</h1>
+                <h1>Damian Garbus CV</h1>
                 <div class="header-actions">
                     <button onclick="window.print()" class="print-btn">
                         📄 Print / Save as PDF
                     </button>
-                    <a href="https://github.com/PoshlandPro/CV" class="github-link" target="_blank">
+                    <!-- <a href="https://github.com/PoshlandPro/CV" class="github-link" target="_blank">
                         📱 View on GitHub
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </header>
